// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Form EngageCheckbox should match snapshot 1`] = `
<div
  className="EngageCheckbox__StyledCheckbox-sc-1bflotg-0 dZKQKG form-group"
  onClick={[Function]}
>
  <img
    alt=""
    src="IMAGE_MOCK"
  />
  <label
    className=""
  >
     EngageCheckbox title
  </label>
</div>
`;

exports[`components/Form EngageCurrencyInput should match snapshot 1`] = `
<div
  className="eng-input--primary form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
  >
    EngageCurrencyInput Title
  </label>
  <input
    className="form-control"
    disabled={true}
    name="EngageCurrencyInput_name"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    placeholder="$ here"
    type="text"
    value="$100"
  />
</div>
`;

exports[`components/Form EngageDatePicker should match snapshot 1`] = `
<div
  className="eng-input--primary form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
  >
    EngageDatePicker__title
  </label>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <input
        className="form-control"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Choose an option"
        readOnly={false}
        type="text"
        value="2020-01-19"
      />
    </div>
  </div>
  <img
    alt=""
    src="IMAGE_MOCK"
  />
</div>
`;

exports[`components/Form EngageDropdown should match snapshot 1`] = `
<div
  className="EngageDropdown__FormGroupStyled-sc-1kw1cd6-0 bDoKkd form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
    htmlFor="EngageDropdown__tite"
  >
    EngageDropdown__tite
  </label>
  <div
    className="eng-select--primary EngageDropdown__StyledSelect-sc-1kw1cd6-1 jDqsr eng-select--primary--is-disabled css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className="eng-select--primary__control eng-select--primary__control--is-disabled css-1fhf3k1-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="eng-select--primary__value-container css-1hwfws3"
      >
        <div
          className="eng-select--primary__placeholder css-1c7vfki-Placeholder"
        >
          EngageDropdown__placeholder
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="eng-select--primary__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="eng-select--primary__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="eng-select--primary__indicator-separator css-109onse-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="eng-select--primary__indicator eng-select--primary__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <img
            alt=""
            src="IMAGE_MOCK"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Form EngageFormErrors should match snapshot 1`] = `
<div
  className="EngageFormErrors__Container-tw85ct-0 UZjty"
>
  <span
    className="EngageFormErrors__Title-tw85ct-1 dpqUbb"
  >
    <img
      alt=""
      src="IMAGE_MOCK"
    />
    <span>
      <b>
        Whoops!
      </b>
       There were some problems with your input
    </span>
  </span>
  <ul
    className="EngageFormErrors__ListErrors-tw85ct-2 bziGkU"
  >
    <li>
      Error row 1
    </li>
    <li>
      Error row 2
    </li>
  </ul>
</div>
`;

exports[`components/Form EngageInput should match snapshot 1`] = `
<div
  className="eng-input--primary EngageInput__StyledFormGroup-sc-2i82me-0 kVVsnx form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
  >
    Last name
  </label>
  <input
    className="form-control"
    maxLength="100"
    name="email"
    onChange={[Function]}
    placeholder="Enter last name"
    type="text"
    value="EngageInput__value"
  />
</div>
`;

exports[`components/Form EngagePercentageInput should match snapshot 1`] = `
<div
  className="eng-input--primary form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
  >
    Sales fee
  </label>
  <input
    className="form-control"
    disabled={true}
    name="sales_charge"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    placeholder="% here"
    type="text"
    value=""
  />
</div>
`;

exports[`components/Form EngageRadioButtons should match snapshot 1`] = `
Array [
  <label
    className="eng-label--input-title eng-label--required"
  >
    Client restrictions
  </label>,
  <div
    className="EngageRadioButtons__Wrapper-lkavtw-0 iSXyax"
    disabled={true}
  />,
]
`;

exports[`components/Form EngageSwitchYesNo should match snapshot 1`] = `
<button
  className="EngageSwitchYesNo__StyledToggleButton-sc-185lsjz-0 fxVFHc"
  onClick={[Function]}
>
  
  <span>
    YES
  </span>
  <img
    alt=""
    src="IMAGE_MOCK"
  />
</button>
`;

exports[`components/Form EngageTagSelect should match snapshot 1`] = `
<div
  className="form-group"
>
  <label
    className="eng-label--input-title eng-label--required"
  >
    Tags
  </label>
  <div
    className="EngageTagSelect__SelectedTags-sc-1du8i3g-0 huFIiG"
  />
  <div
    className="EngageTagSelect__SearchBox-sc-1du8i3g-3 kEOzjl"
  >
    <img
      alt=""
      src="IMAGE_MOCK"
    />
    <input
      className="form-control"
      disabled={true}
      onChange={[Function]}
      placeholder="Type to search..."
      type="text"
    />
  </div>
  <div
    className="EngageTagSelect__ListTags-sc-1du8i3g-1 bKrMSv"
    disabled={true}
  />
</div>
`;

exports[`components/Form EngageTextarea should match snapshot 1`] = `
<div
  className="eng-input--primary EngageTextarea__StyledFormGroup-gbzf9b-0 iqOeQC form-group"
>
  <label
    className="eng-label--input-title EngageTextarea__FloatLabel-gbzf9b-1 SruCg"
  >
    273
     character
    <span>
      s
    </span>
     remaining
  </label>
  <label
    className="eng-label--input-title"
  >
    External full description
  </label>
  <textarea
    className="EngageTextarea__StyledInput-gbzf9b-2 jmZdrs form-control"
    disabled={true}
    maxLength={300}
    name="description"
    onChange={[Function]}
    placeholder=""
    rows={3}
    value="EngageTextarea__description"
  />
</div>
`;
